--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"noFallthroughCasesInSwitch": true,
+		"declaration": true,
 
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": false,
